@@ -1,3 +1,8 @@
+2006-09-08  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* latex.el: Use read-kbd-macro instead of kbd for LaTeX-math-mode.
+	(LaTeX-math-default): Add bindings for \var... symbols.
+
 2006-09-08  David Kastrup  <dak@gnu.org>
 
 	* latex.el: Allow strings for keys in LaTeX-math-mode.
